# sleepy-bot

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  example.env  pyproject.toml  sleepy_bot.drawio
bot/: main.py  setup_utils.py
bot/core/dialog_manager/: custom_dialog_manager.py  dialog_manager_factory.py  handler.py
bot/core/dialogs/: mixins.py
bot/core/routing/: auto_register.py  collector.py
bot/core/widgets/: buttons.py  calendar.py
bot/dialogs/: __init__.py
bot/dialogs/dreams/: __init__.py  dialog.py  getters.py  handlers.py  state.py  windows.py
bot/dialogs/home/: dialog.py  getters.py  handlers.py  state.py  windows.py
bot/dialogs/record_dream/: __init__.py  dialog.py  handlers.py  state.py  windows.py
bot/dialogs/start/: dialog.py  handlers.py  windows.py
bot/dialogs/statistic/: dialog.py  handlers.py  state.py  windows.py
bot/dialogs/tracking/: dialog.py  getters.py  handlers.py  state.py  windows.py
bot/handlers/: __init__.py  commands.py
bot/middlewares/: callback_logger.py  errors_middleware.py  logger.py  register.py
entity/tracker/: cases.py  dto.py  enums.py  repo.py  service.py  utils.py
entity/user/: dto.py  repo.py  service.py
infra/db/: database.py  migrate_script.py
infra/db/repo/: base.py  crud.py  mixins.py
infra/db/tables/: active_manager.py  base_mixin.py  sleep_record.py  user.py
infra/di/app/: __init__.py  container.py  providers.py
infra/di/bot/: __init__.py
infra/di/entity/: __init__.py  providers.py
infra/logger/: config.yaml  formatters.py  setup.py
infrastructure/db/: database.py  migrate_script.py
infrastructure/db/base/: repo.py
infrastructure/db/repo/: base.py  mixins.py
infrastructure/db/tables/: __init__.py  active_manager.py  sleep_record.py  user.py
infrastructure/dev/commands/: prompt_commit_msg_maker.py
tests/entity/: test_tracker.py  test_user.py
(+52 files in other folders)
