[tool.poetry]
name = "sleepy-bot"
version = "0.1.0"
description = ""
authors = ["pavel"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.20.0.post0"
aiogram-dialog = "^2.3.1"
pydantic = {extras = ["email"], version = "^2.11.5"}
pydantic-settings = "^2.9.1"
asyncpg = "^0.30.0"
tortoise-orm = "^0.25.0"
aerich = "^0.9.0"
loguru = "^0.7.3"
dishka = "^1.6.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^6.0.1"
pre-commit = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 95
skip-string-normalization = true
preview = true


[tool.isort]
profile = "black"
line_length = 95
multi_line_output = 3
include_trailing_comma = true
